# isolation-forest

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  build.gradle  gradlew.bat  settings.gradle  version.properties
isolation-forest-onnx/: MANIFEST.in  README.md  build.gradle  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
isolation-forest-onnx/src/isolationforestonnx/: extended_isolation_forest_converter.py  isolation_forest_converter.py
isolation-forest-onnx/test/: test_extended_isolation_forest_converter.py  test_isolation_forest_converter.py
isolation-forest-onnx/test/integration/: test_extended_isolation_forest_onnx_integration.py  test_isolation_forest_onnx_integration.py
isolation-forest-onnx/test/resources/: mammography.csv
isolation-forest-onnx/test/resources/savedExtendedIsolationForestModel/mammographyModel/: mammographyOutlierScores.csv
isolation-forest-onnx/test/resources/savedExtendedIsolationForestModel/mammographyModel/data/: .part-00000-e92f594b-9014-4f3d-98e0-4f4520cd78e2-c000.avro.crc  part-00000-e92f594b-9014-4f3d-98e0-4f4520cd78e2-c000.avro
isolation-forest-onnx/test/resources/savedExtendedIsolationForestModel/mammographyModel/metadata/: .part-00000.crc  part-00000
isolation-forest-onnx/test/resources/savedExtendedIsolationForestModel/shuttleModel/data/: .part-00000-dcb8745a-8873-4a1b-b297-42b4016e5e8f-c000.avro.crc  part-00000-dcb8745a-8873-4a1b-b297-42b4016e5e8f-c000.avro
isolation-forest-onnx/test/resources/savedExtendedIsolationForestModel/shuttleModel/metadata/: .part-00000.crc  part-00000
isolation-forest-onnx/test/resources/savedIsolationForestModel/mammographyModel/: mammographyOutlierScores.csv
isolation-forest-onnx/test/resources/savedIsolationForestModel/mammographyModel/data/: part-00000-636230ae-dfcc-4b67-b55c-6545a241304d-c000.avro
isolation-forest-onnx/test/resources/savedIsolationForestModel/mammographyModel/metadata/: part-00000
isolation-forest-onnx/test/resources/savedIsolationForestModel/shuttleModel/data/: part-00000-5cf865df-3d3f-49ab-8997-701acdeac362-c000.avro
isolation-forest-onnx/test/resources/savedIsolationForestModel/shuttleModel/metadata/: part-00000
(+74 files in other folders)
