[metadata]
name = isolation-forest-onnx
author = James Verbus
author_email = james.verbus@gmail.com
description = A converter for the LinkedIn Spark/Scala isolation forest model format to ONNX format.
url = https://github.com/linkedin/isolation-forest
license = BSD 2-Clause License
keywords = isolation forest, ONNX

[options]
packages = isolationforestonnx
package_dir =
    = src
python_requires = >=3.9
install_requires =
    avro_python3==1.9.1
    numpy==1.26.4
    onnx==1.17.0
    onnxruntime==1.18.0
    protobuf==5.29.5

[options.extras_require]
test =
    pytest==8.3.2
    coverage==7.6.1
dev =
    wheel==0.38.1
    flake8==7.1.1
    mypy==1.11
    setuptools==74.0.0
    twine==5.1.1

[flake8]
max-line-length = 88
exclude = venv, build, dist, .pytest_cache, .mypy_cache

[coverage:report]
fail_under = 90
show_missing = true
exclude_lines =
    pragma: nocover
    raise NotImplementedError
    raise AssertionError
    except checker.ValidationError
    except Exception
    logger.error
    raise

[coverage:run]
branch = true
omit =
    # Omit nothing for now.

[mypy]
# For details on each flag, please see the mypy documentation at:
# https://mypy.readthedocs.io/en/stable/config_file.html#config-file

# Import Discovery
mypy_path = src
namespace_packages = true

# Ignore errors for libraries with no type hints
ignore_missing_imports = true

# Disallow dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true

# Untyped definitions and calls
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false

# None and Optional handling
no_implicit_optional = true

# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Miscellaneous strictness flags
implicit_reexport = false
strict_equality = true

# Configuring error messages
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
show_absolute_path = true

# Miscellaneous
warn_unused_configs = true
verbosity = 0
